--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluentui_icons: ^1.0.0
+  get: ^4.3.8
   gap: ^3.0.1
 
 dev_dependencies:
