--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fluentui_icons: ^1.0.0
   get: ^4.3.8
   gap: ^3.0.1
+  barcode_widget: ^2.0.4
 
 dev_dependencies:
   flutter_test:
