--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.3.8
   gap: ^3.0.1
   barcode_widget: ^2.0.4
+  dynamic_color: ^1.6.6
 
 dev_dependencies:
   flutter_test:
